[package]
name = "active-win-macos-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
active-win-pos-rs = "0.8.3"
cocoa = "0.24.1"
objc = "0.2.7"

[target.'cfg(target_os = "macos")'.build-dependencies]
bindgen = "0.68.1"
